Don't attempt to cache network state in the ResourceRequestAllowedNotifier.

Caching the network state is dangerous, because a single missed network
connection update can indefinitely block all subsequent requests. Moreover,
there is no benefit to caching the state – it's just extra overhead.

R=pauljensen@chromium.org

Bug: 793103
Change-Id: I21d6318b3b85fb7125cc53b8e3d54842c2ce7564
Reviewed-on: https://chromium-review.googlesource.com/818527
Reviewed-by: Paul Jensen <pauljensen@chromium.org>
Commit-Queue: Ilya Sherman <isherman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523151}
Former-commit-id: dcaadbb611d296ae6165897b8f5e760f4ff557c0